Fix issue with main text not showing using margin-top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
   }
 
 
